[package]
name = "a_macro"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
proc-macro = true

[dependencies]
syn = {version = "2.0.16", features = ["extra-traits"]}
derive-new = "0.5.9"
quote = "1.0.27"
proc-macro2 = "1.0"
anyhow = "1.0"

[dev-dependencies]
pretty_assertions = "1.3.0"
chrono = "0.4.23"
