[package]
name = "a_macro_use"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
csv = "1.3.0"
serde = { version = "1.0.189", features = ["derive"] }
bigdecimal = { version = "0.3.0", features = ["serde"] }
serde_with = { version = "3.4.0", features = ["macros"] }
a_macro = { path = "../a_macro"}
derive-new = "0.5.9"
